--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Smitchell's Portfolio</title>
   </head>
   <body>
+    <header>
+      <h1>Stuart Mitchell</h1>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <footer class="text-center">
+      <p>
+        <a id="githubLink" class="link" href="https://github.com/SMitchell92">My Github</a>
+        <a id="linkedInLink" class="link" href="https://www.linkedin.com/in/stuart-mitchell-a39513179/">My LinkedIn</a>
+      </p>
+    </footer>
   </body>
 </html>
